// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should render properly on first page 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 {
  color: #4D4948;
  padding: undefinedpx 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  color: #4D4948;
  padding: undefinedpx 12px;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: undefinedpx 12px;
  background-color: #4D4948;
  border: 1px solid #4D4948;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-3:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2 {
  color: #B3B3B3;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-4 {
  padding: undefinedpx 12px;
  border: 1px solid #4D4948;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B3B3B3;
}

.emotion-5 {
  padding: undefinedpx 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4D4948;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: undefinedpx 12px;
  background-color: #4D4948;
  border: 1px solid #4D4948;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-7:hover {
  opacity: 0.59;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  color: #B3B3B3;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

<div
  className="emotion-9"
>
  <div
    className="emotion-0"
  >
    Jobs: 1–17 of 415
  </div>
  <div
    className="emotion-1"
  >
    Page:
  </div>
  <div
    className="emotion-8"
  >
    <button
      className="emotion-3"
      disabled={true}
    >
      <svg
        className="emotion-2"
        data-file-name="chevron.svg"
        width={16}
      />
    </button>
    <div
      className="emotion-4"
    >
      1
    </div>
    <div
      className="emotion-5"
    >
      of 24
    </div>
    <a
      className="emotion-7"
      href="/?page=2"
      onClick={[Function]}
      rel="next"
    >
      <svg
        className="emotion-6"
        data-file-name="chevron.svg"
        width={16}
      />
    </a>
  </div>
</div>
`;

exports[`<Pagination /> should render properly on last page 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-0 {
  color: #4D4948;
  padding: undefinedpx 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  color: #4D4948;
  padding: undefinedpx 12px;
  padding-left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  color: #B3B3B3;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-4 {
  padding: undefinedpx 12px;
  border: 1px solid #4D4948;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B3B3B3;
}

.emotion-5 {
  padding: undefinedpx 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4D4948;
}

.emotion-6 {
  color: #B3B3B3;
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: undefinedpx 12px;
  background-color: #4D4948;
  border: 1px solid #4D4948;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-3:hover {
  opacity: 0.59;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: undefinedpx 12px;
  background-color: #4D4948;
  border: 1px solid #4D4948;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-7:hover {
  opacity: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-0"
  >
    Jobs: 1–17 of 415
  </div>
  <div
    className="emotion-1"
  >
    Page:
  </div>
  <div
    className="emotion-8"
  >
    <a
      className="emotion-3"
      href="/"
      onClick={[Function]}
      rel="prev"
    >
      <svg
        className="emotion-2"
        data-file-name="chevron.svg"
        width={16}
      />
    </a>
    <div
      className="emotion-4"
    >
      2
    </div>
    <div
      className="emotion-5"
    >
      of 24
    </div>
    <button
      className="emotion-7"
      disabled={true}
    >
      <svg
        className="emotion-6"
        data-file-name="chevron.svg"
        width={16}
      />
    </button>
  </div>
</div>
`;
